force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/NF_Current_Year_Group__c.field-meta.xml
<CustomField>
    <fullName>NF_Current_Year_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year Group</label>
    <type>Checkbox</type>
</CustomField>