force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/NF_Group_Segment_Index__c.field-meta.xml
<CustomField>
    <fullName>NF_Group_Segment_Index__c</fullName>
    <label>Group Segment Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segment 1</fullName>
            </value>
            <value>
                <fullName>Segment 2</fullName>
            </value>
            <value>
                <fullName>Segment 3</fullName>
            </value>
            <value>
                <fullName>Segment 4</fullName>
            </value>
            <value>
                <fullName>Segment 5</fullName>
            </value>
            <value>
                <fullName>Segment 6</fullName>
            </value>
            <value>
                <fullName>Segment 7</fullName>
            </value>
            <value>
                <fullName>Segment 8</fullName>
            </value>
            <value>
                <fullName>Segment 9</fullName>
            </value>
            <value>
                <fullName>Segment 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>